add footer with level navigation

--- a/src/pug/include/footer.pug
+++ b/src/pug/include/footer.pug
@@ -1,6 +1,14 @@
 .footer
-  .navigation
-    div
-      button#backbutton Previous Level
-    div
-      button#nextbutton Next Level
+  //.navigation
+  //  a#backbutton.navbutton Previous Level
+  //  a#nextbutton.navbutton Next Level
+  .footerbox
+    a#backbutton.navbutton Previous Level
+  .footerbox
+    #navcircles.circles
+      a.circ(href="index.html#1").selected
+      a.circ(href="index.html#2")
+      a.circ(href="index.html#3")
+      a.circ(href="index.html#4")
+  .footerbox
+    a#nextbutton.navbutton Next Level
