--- a/src/sass/default.scss
+++ b/src/sass/default.scss
@@ -6,8 +6,8 @@ body {
 }
 
 svg {
-  width: 95vw;
-  height: 70vh;
+  width: 100%;
+  height: 100%;
 }
 
 table {
@@ -16,4 +16,24 @@ table {
 
 tr:hover {
   opacity: 0.8;
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 100vh;
+}
+
+.network {
+  width: 70vw;
+  position: relative;
+}
+
+.network .text {
+  position: absolute;
+}
+
+.training {
+  width: 30vw;
 }
