--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,8 +1,4 @@
 .footer {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
   background: #FFFFFF;
   box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25);
   align-items: baseline;
@@ -72,11 +68,15 @@
 body {
   font-family: "Roboto";
   user-select: none;
-  margin: 0px; }
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh; }
 
 svg {
   width: 100%;
-  height: 100%; }
+  height: -webkit-fill-available;
+  }
 
 table {
   border-spacing: 0; }
@@ -84,11 +84,11 @@ table {
 tr:hover {
   opacity: 0.8; }
 
-#main {
+.main {
+  flex: 1;
   display: flex;
   flex-direction: row;
-  width: 100vw;
-  height: 100vh; }
+  width: 100vw; }
 
 .network {
   width: 70vw;
