--- a/src/sass/default.scss
+++ b/src/sass/default.scss
@@ -4,11 +4,14 @@ body {
   font-family: "Roboto";
   user-select: none;
   margin: 0px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 svg {
   width: 100%;
-  height: 100%;
+  height: -webkit-fill-available;
 }
 
 table {
@@ -19,11 +22,11 @@ tr:hover {
   opacity: 0.8;
 }
 
-#main {
+.main {
+  flex: 1;
   display: flex;
   flex-direction: row;
   width: 100vw;
-  height: 100vh;
 }
 
 .network {
