add gradient arrows for both normalized and non normalized edge weights

--- a/src/pug/sections/network.pug
+++ b/src/pug/sections/network.pug
@@ -12,6 +12,7 @@ svg(viewBox="100 100 900 900")
     g.edges
     g.activations
     g.gradient
+    g.normalized-gradient
     g.parameters
     g.normalized-parameters
   g#nodes
