--- a/src/pug/include/footer.pug
+++ b/src/pug/include/footer.pug
@@ -3,7 +3,7 @@
   //  a#backbutton.navbutton Previous Level
   //  a#nextbutton.navbutton Next Level
   .footerbox
-    a#backbutton.navbutton Previous Level
+    a#backbutton.button Previous Level
   .footerbox
     #navcircles.circles
       a.circ(href="index.html#1").selected
@@ -11,4 +11,4 @@
       a.circ(href="index.html#3")
       a.circ(href="index.html#4")
   .footerbox
-    a#nextbutton.navbutton Next Level
+    a#nextbutton.button Next Level
