--- a/src/pug/tpl/base.pug
+++ b/src/pug/tpl/base.pug
@@ -26,5 +26,5 @@ html
     block body
     block scripts
     script(type='text/javascript', src="src/js/d3.js")
-    script(type="module", src="src/js/LevelController.js") //TODO: browserfy
+    script(type="module", src="src/js/main.js") //TODO: browserfy
     block closing
