--- a/src/pug/sections/main.pug
+++ b/src/pug/sections/main.pug
@@ -4,25 +4,9 @@
     h1#leveltitle Adjust the Neural Network
     p#description
   include network
+  .helpme
+    .button#helpme Help me
 
-.training
-  div.helper
-    p
-      input(type="checkbox")#showgradient
-      label(for="showgradient") show negative gradient of loss function
-    p
-      button#gradientdescent Adjust parameters with gradient descent
-    p
-      button#gradientdescent100 Adjust parameters with 100 gradient descent steps
-  div.data
-    h3 Training Data
-    table#trainingtable
-    div
-      h3 Total error on training data
-      p Value of the loss function (to be minimized):
-      .center-formula
-        p#totalerror
-        p.formula
-          span  = 
-          span#totalerrorterm
-  
+.train
+  include train
+    
