Split edges in multiple Bezier splines

--- a/src/pug/sections/network.pug
+++ b/src/pug/sections/network.pug
@@ -15,6 +15,7 @@ svg(viewBox="100 100 900 900")
     g.normalized-gradient
     g.parameters
     g.normalized-parameters
+    g.factorlines
   g#nodes
     g.nodes
     g.gradient
