Add icons + credits

--- a/src/pug/include/footer.pug
+++ b/src/pug/include/footer.pug
@@ -12,3 +12,4 @@
       a.circ(href="index.html#4")
   .footerbox
     a#nextbutton.button Next Level
+    #creditsbutton.icon(onclick="document.querySelector('.credits').classList.toggle('visible')")
