--- a/src/pug/sections/main.pug
+++ b/src/pug/sections/main.pug
@@ -4,9 +4,12 @@
     h1#leveltitle Adjust the Neural Network
     p#description
   include network
-  .helpme
-    .button#helpme Help me
-
+  #helpmebutton.icon
 .train
   include train
+
+#screenoverlay
+.credits
+  include credits
+
     
