--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -36,7 +36,8 @@
   flex: 1;
   display: flex;
   justify-content: center;
-  flex-direction: row; }
+  flex-direction: row;
+  align-items: center; }
 
 .footer .footerbox:first-child > a {
   margin-right: auto; }
@@ -290,6 +291,23 @@ input[type=range]:focus {
 input[type=range]:focus::-webkit-slider-runnable-track {
   background: #888; }
 
+#creditsbutton {
+  background-image: url("../../assets/img/info.svg"); }
+
+.credits {
+  visibility: hidden;
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translateX(-50%) translateY(-50%);
+  background: #FFFFFF;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 28px;
+  z-index: 30; }
+
 .visible {
   visibility: visible !important;
   opacity: 1 !important; }
@@ -297,7 +315,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 body {
   font-family: "Roboto";
   user-select: none;
-  margin: 0px;
+  margin: 0;
   display: flex;
   flex-direction: column;
   height: 100vh; }
@@ -347,10 +365,28 @@ tr:hover {
   margin: 0;
   text-align: center; }
 
-.helpme {
+#helpmebutton {
   position: absolute;
   top: 80px;
-  right: -80px;
-  transform: rotate(-90deg); }
+  right: 0;
+  background-image: url("../../assets/img/bulb.svg"); }
+
+.icon {
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 60px;
+  height: 60px;
+  margin: 20px; }
+
+.icon.selected {
+  filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.4)); }
+
+#screenoverlay {
+  visibility: hidden;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 20;
+  background: rgba(0, 0, 0, 0.5); }
 
 /*# sourceMappingURL=default.css.map */
