--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -48,6 +48,7 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
+  align-items: center;
 }
 
 .footer .footerbox:first-child > a {
