--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -49,6 +49,7 @@
   justify-content: center;
   flex-direction: row;
   align-items: center;
+  margin: 0 10px 0 10px;
 }
 
 .footer .footerbox:first-child > a {
