--- a/src/sass/default.scss
+++ b/src/sass/default.scss
@@ -74,19 +74,11 @@ tr:hover {
   text-align: center;
 }
 
-#helpmebutton {
-  position: absolute;
-  top: 80px;
-  right: 0;
-  background-image: url("../../assets/img/bulb.svg");
-}
-
 .icon {
   background-size: contain;
   background-repeat: no-repeat;
   width: 60px;
   height: 60px;
-  margin: 20px;
 }
 
 .icon.selected {
@@ -100,4 +92,13 @@ tr:hover {
   height: 100vh;
   z-index: 20;
   background: rgba(0,0,0,.5);
+}
+
+#helpmebutton {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  width: 120px;
+  height: 120px;
+  background-image: url("../../assets/img/bulb.svg");
 }
