--- a/src/sass/default.scss
+++ b/src/sass/default.scss
@@ -92,6 +92,8 @@ tr:hover {
   height: 100vh;
   z-index: 20;
   background: rgba(0,0,0,.5);
+
+  backdrop-filter: blur(10px);
 }
 
 #helpmebutton {
