--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -189,6 +189,9 @@
 .train input[type=range] {
   width: 100%; }
 
+.train .trainingdata {
+  visibility: hidden; }
+
 .button {
   font-family: Roboto;
   font-style: normal;
