--- a/src/pug/sections/train.pug
+++ b/src/pug/sections/train.pug
@@ -9,7 +9,7 @@
       div(title="reset training").reset
       div(title="pause/resume training (continious gradient descent steps)").pause-resume.pause
       div(title="train a single step (Adjust parameters with gradient descent)").single-step
-.box
+.box.trainingdata.visible
   h3 Training Data
   table#trainingtable
   .v-seperator
