--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -3,6 +3,7 @@
   box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25);
   align-items: baseline;
   display: flex;
+  padding: 14px;
   z-index: 10; }
 
 .footer .international {
@@ -38,13 +39,7 @@
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  margin: 0 10px 0 10px; }
-
-.footer .footerbox:first-child > a {
-  margin-right: auto; }
-
-.footer .footerbox:last-child > a {
-  margin-left: auto; }
+  margin: auto; }
 
 .train {
   display: flex;
@@ -203,7 +198,7 @@
   border: 2px solid #000000;
   box-sizing: border-box;
   border-radius: 10px;
-  margin: 25px;
+  margin: 0px;
   pointer-events: all; }
 
 .button:hover {
@@ -372,8 +367,9 @@ tr:hover {
 .icon {
   background-size: contain;
   background-repeat: no-repeat;
-  width: 60px;
-  height: 60px; }
+  width: 50px;
+  height: 50px;
+  margin: 10px; }
 
 .icon.selected {
   filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.4)); }
@@ -394,5 +390,8 @@ tr:hover {
   width: 120px;
   height: 120px;
   background-image: url("../../assets/img/bulb.svg"); }
+
+#internationalbutton {
+  background-image: url("../../assets/img/international.svg"); }
 
 /*# sourceMappingURL=default.css.map */
