--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -3,6 +3,7 @@
   box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.25);
   align-items: baseline;
   display: flex;
+  padding: 14px;
   z-index: 10;
 }
 
@@ -49,13 +50,5 @@
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  margin: 0 10px 0 10px;
-}
-
-.footer .footerbox:first-child > a {
-  margin-right: auto;
-}
-
-.footer .footerbox:last-child > a {
-  margin-left: auto;
+  margin: auto
 }
