--- a/src/sass/default.scss
+++ b/src/sass/default.scss
@@ -77,8 +77,9 @@ tr:hover {
 .icon {
   background-size: contain;
   background-repeat: no-repeat;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
+  margin: 10px;
 }
 
 .icon.selected {
@@ -103,4 +104,8 @@ tr:hover {
   width: 120px;
   height: 120px;
   background-image: url("../../assets/img/bulb.svg");
+}
+
+#internationalbutton {
+  background-image: url("../../assets/img/international.svg");
 }
