--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -48,28 +48,21 @@
   padding: 30px;
   justify-content: space-between; }
 
-.train .helper {
-  visibility: hidden;
-  opacity: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-align: center; }
-
 .train .box {
   background: #FFFFFF;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  padding: 28px; }
+  padding: 28px;
+  margin: 14px; }
 
 .train .controls {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   width: 100%;
-  height: 100px;
-  justify-content: center; }
+  height: 100px; }
 
 .train .controls > div {
   background-size: contain;
@@ -186,6 +179,59 @@
 
 .train .trainingdata {
   visibility: hidden; }
+
+.train .tabbed {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 0; }
+
+.tabs {
+  flex: 0;
+  height: 100%;
+  width: 100px;
+  display: flex;
+  flex-direction: column; }
+
+.tab {
+  display: inline-block;
+  height: calc(50%);
+  width: 100px;
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.tab.selected {
+  box-shadow: 3px 0 3px 0 rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 10; }
+
+.tab:not(.selected) {
+  background-color: rgba(0, 0, 0, 0.1); }
+
+.tabbed .content {
+  flex: 1;
+  margin: 10px;
+  height: 200px; }
+
+.mission {
+  visibility: hidden;
+  height: 200px;
+  text-align: justify; }
+
+.train .helper {
+  visibility: hidden;
+  height: 200px;
+  opacity: 0;
+  display: flex;
+  flex-direction: column; }
+
+#helpmebutton {
+  background-image: url("../../assets/img/bulb.svg");
+  border-bottom-right-radius: 10px; }
+
+#missionbutton {
+  background-image: url("../../assets/img/mission.svg");
+  border-top-right-radius: 10px; }
 
 .button {
   font-family: Roboto;
@@ -307,6 +353,10 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   padding: 28px;
   z-index: 30; }
 
+.hidden {
+  visibility: hidden;
+  opacity: 0; }
+
 .visible {
   visibility: visible !important;
   opacity: 1 !important; }
@@ -338,7 +388,7 @@ tr:hover {
   height: 0; }
 
 .network {
-  width: 75vw;
+  width: 70vw;
   position: relative; }
 
 .network .text {
@@ -346,13 +396,8 @@ tr:hover {
   padding: 20px;
   pointer-events: none; }
 
-#description {
-  height: 200px;
-  column-fill: auto;
-  column-count: 5; }
-
 .train {
-  width: 25vw; }
+  width: 30vw; }
 
 #totalerror {
   font-size: 50px; }
@@ -383,15 +428,18 @@ tr:hover {
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px); }
 
-#helpmebutton {
-  position: absolute;
-  top: 40px;
-  right: 0;
-  width: 120px;
-  height: 120px;
-  background-image: url("../../assets/img/bulb.svg"); }
-
 #internationalbutton {
   background-image: url("../../assets/img/international.svg"); }
+
+.absolute {
+  position: absolute;
+  left: 0;
+  right: 0; }
+
+.relative {
+  position: relative; }
+
+p {
+  margin: 0.5em; }
 
 /*# sourceMappingURL=default.css.map */
