Further adjusted right menu

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -45,8 +45,8 @@
   display: flex;
   flex-direction: column;
   font-size: 20px;
-  padding: 30px;
-  justify-content: space-between; }
+  padding: 5px;
+  justify-content: space-around; }
 
 .train .box {
   background: #FFFFFF;
@@ -54,7 +54,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  padding: 28px;
+  padding: 14px;
   margin: 14px; }
 
 .train .controls {
@@ -178,6 +178,9 @@
   width: 100%; }
 
 .train .trainingdata {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   visibility: hidden; }
 
 .train .tabbed {
@@ -211,16 +214,16 @@
 .tabbed .content {
   flex: 1;
   margin: 10px;
-  height: 200px; }
+  height: 180px; }
 
 .mission {
   visibility: hidden;
-  height: 200px;
+  height: 180px;
   text-align: justify; }
 
 .train .helper {
   visibility: hidden;
-  height: 200px;
+  height: 180px;
   opacity: 0;
   display: flex;
   flex-direction: column; }
@@ -232,6 +235,9 @@
 #missionbutton {
   background-image: url("../../assets/img/mission.svg");
   border-top-right-radius: 10px; }
+
+th {
+  font-weight: 400; }
 
 .button {
   font-family: Roboto;
