Make button green if level successful

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -448,4 +448,7 @@ tr:hover {
 p {
   margin: 0.5em; }
 
+.successful {
+  background: rgba(100, 255, 0, 0.2) !important; }
+
 /*# sourceMappingURL=default.css.map */
