--- a/src/pug/sections/train.pug
+++ b/src/pug/sections/train.pug
@@ -23,7 +23,7 @@
     p(style="font-weight:600;") Training Data
   div
     table#trainingtable
-  .v-seperator
+  //.v-seperator
   div
     p Total error on training data (loss function):
     .center-formula
