--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -379,12 +379,12 @@ svg {
   width: 100%;
   height: 100%; }
 
-table {
-  border-spacing: 0;
-  border-collapse: collapse; }
-
 tr:hover {
   opacity: 0.8; }
+
+td {
+  border-radius: 10px;
+  text-align: center; }
 
 .main {
   flex: 1;
