--- a/src/sass/_train.scss
+++ b/src/sass/_train.scss
@@ -6,7 +6,6 @@
   justify-content: space-around;
 }
 
-
 .train .box {
   background: #FFFFFF;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
@@ -20,7 +19,7 @@
 .train .controls {
   display: flex;
   flex-direction: row;
-    justify-content: center;
+  justify-content: center;
   width: 100%;
   height: 100px;
 }
@@ -161,8 +160,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
   visibility: hidden;
+  text-align: center;
+  align-items: center;
 }
 
 .train .tabbed {
@@ -197,14 +197,13 @@
 .tab:not(.selected) {
   background-color: rgba(0, 0, 0, 0.1);
 }
-
 $mission-help-box-height: 180px;
+
 .tabbed .content {
   flex: 1;
   margin: 10px;
   height: $mission-help-box-height;
 }
-
 
 .mission {
   visibility: hidden;
