Remove external URLs from credits

--- a/src/pug/sections/credits.pug
+++ b/src/pug/sections/credits.pug
@@ -1,7 +1,9 @@
-p Icons made by <a href="https://www.flaticon.com/authors/bqlqn" title="bqlqn">bqlqn</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+//p Icons made by <a href="https://www.flaticon.com/authors/bqlqn" title="bqlqn">bqlqn</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+p Icons made by bqlqn from www.flaticon.com
 p
   | This site was created by IMAGINARY, a travelling exhibition that shows mathematics can be beautiful,
   | interactive, something you can touch, or a way to express your emotions beyond what words can achieve.
   | It has visited over 55 countries since 2007.
 p
-  a(href='http://about.imaginary.org') Learn more about IMAGINARY
+  //a(href='http://about.imaginary.org') Learn more about IMAGINARY
+  | Find out more about IMAGINARY at https://about.imaginary.org
