Hide buttons that are non functional yet.

--- a/src/pug/include/footer.pug
+++ b/src/pug/include/footer.pug
@@ -12,6 +12,6 @@
       a.circ(href="index.html#4")
   .footerbox
     #nextbutton.button Next Level
-  .footerbox(style="flex:0")
-    #creditsbutton.icon
-    #internationalbutton.icon
+  //.footerbox(style="flex:0")
+    //#creditsbutton.icon
+    //#internationalbutton.icon
