Move dependencies into dedicated bundle

--- a/src/pug/tpl/base.pug
+++ b/src/pug/tpl/base.pug
@@ -26,5 +26,6 @@ html
   body(class!=body.class.join(' '))
     block body
     block scripts
-    script(type="module", src="assets/js/bundle.min.js")
+    script(src="assets/js/dependencies.min.js")
+    script(src="assets/js/bundle.min.js")
     block closing
