Translate hardcoded texts and labels into German

--- a/src/pug/include/footer.pug
+++ b/src/pug/include/footer.pug
@@ -3,7 +3,7 @@
   //  a#backbutton.navbutton Previous Level
   //  a#nextbutton.navbutton Next Level
   .footerbox
-    #backbutton.button Previous Level
+    #backbutton.button Voriges Level
   .footerbox
     #navcircles.circles
       a.circ(href="index.html#1").selected
@@ -11,7 +11,7 @@
       a.circ(href="index.html#3")
       a.circ(href="index.html#4")
   .footerbox
-    #nextbutton.button Next Level
+    #nextbutton.button Nächstes Level
   //.footerbox(style="flex:0")
     //#creditsbutton.icon
     //#internationalbutton.icon
