Translate hardcoded app title and headers into German

--- a/src/pug/sections/main.pug
+++ b/src/pug/sections/main.pug
@@ -1,7 +1,7 @@
 
 .network
   .text
-    h1#leveltitle Adjust the Neural Network
+    h1#leveltitle Passe das Neuronale Netzwerk an
   include network
 .train
   include train
