--- a/src/pug/sections/main.pug
+++ b/src/pug/sections/main.pug
@@ -1,13 +1,11 @@
-
 .network
   .text
-    h1#leveltitle Adjust the Neural Network
+    h1#leveltitle(data-i18n="main:title")
   include network
 .train
   include train
-
 #screenoverlay
 .credits
   include credits
 
-    
+
